compiler/test/compilable/imports/makedeps_a.d
module imports.makedeps_a;

void a_func() {}
