compiler/test/fail_compilation/imports/imp3254.d
module imports.imp3254;

string test3254()
{
    return "public function";
}

private string test3254(float)
{
    return "private function";
}
